# AI-Team

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  askama.toml  ctfd.py  docker-compose.yml  env.template  extract_tasks.py  main.py  pipeline.py  requirements.txt  run_codex.py  serve_stats.py  stats_db.py  summarize_logs.py  tasks.db
python/: __init__.py  codex.py  ctfd.py  db.py  instance.py  models.py  summarize_logs.py  website.py
python/web/static/: styles.css
src/: __init__.py  codex.py  ctfd.py  db.py  db.rs  download.py  extract_tasks.py  instance.py  main.rs  models.py  run_codex.py  serve_stats.py  summarize_logs.py  web.rs  website.py
src/templates/: index.html  task.html
src/web/static/: styles.css
src/web/templates/: detail.html  stats.html
static/: styles.css
templates/: index.html  stats.html
