[package]
name = "AI-Team"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
askama = "0.15"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }

[package.metadata.askama]
dirs = ["src/templates"]
